css/themes/custom/material/custom-material.css
/* ... */
::-webkit-scrollbar-track:hover {
    background: transparent;
}
::-webkit-scrollbar-track:active {
    background: #333333;
}
::-webkit-scrollbar-corner {
    background: transparent;
}

input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0 30px white inset;
}

input:-webkit-autofill:focus {
    -webkit-box-shadow: 0 0 0 30px white inset;
}

.btn-fab {
    border-radius: 50%;
    font-size: 12px;
    height: 42px;
    margin: auto;
    min-width: 42px;
    width: 42px;
    padding: 0;
    position: relative;
}

.btn-primary {
    color: #fff !important;
    background-color: #337ab7 !important;
}

.btn-success {
    color: #fff !important;
    background-color: #257d25 !important;
}

.btn-info {
    color: #fff !important;
    background-color: #5bc0de !important;
}

.btn-warning {
    color: #fff !important;
    background-color: #f0ad4e !important;
}

.btn-danger {
    color: #fff !important;
    background-color: #ce3a36 !important;
}

.form-control {
    width:100%;
    box-shadow: none;
}

.k-checkbox-label {
    font-weight:unset;
}

label {
    font-weight:400;
}

.k-primary {
    color: hsla(0,0%,100%,.87);
    background-color: #3f51b5;
    border-color: #3f51b5;
}

.dynamic-image-container {
    border-style: dashed;
    border: 1px dashed #3f51b5;
    color: #000;
    border-radius: 5px;
    padding:20px;
}

.panel-default>.panel-heading {
    color: #fff;
    background-color: #5665be;
    border-color: #ddd;
}

body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    font-weight: 400;
}

body {
    width: 100%;
    height: 100%;
    background:  #ffffff;
}

html {
    width: 100%;
    height: 100%;
}

@media only screen and (min-width: 768px) {
    body {
        background:  #f1f1f1;
    }
}

.bg {
    background-image:linear-gradient(-140deg, #75cff8, #00b2ff, #0091ff, #006aff, #065375);
    width:100%;
    height:100%;
}

/*
==============
Material Grid
==============
*/

.k-grid tbody .k-grid-edit, .k-grid tbody .k-grid-delete,
.k-grid tbody .k-grid-update, .k-grid tbody .k-grid-cancel{
    width: 28px;
    height: 28px;
    padding: 0;
    margin: 0px 5px -2px 0px;
    border-radius: 100%;
    background-color: #fff;
    color: #000;
}


.k-grid tbody .k-button:hover {
    background-color: #0470a0;
    color:#ffffff;
}

.k-button{
    font-weight: 400;
    transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
    text-transform: capitalize;
    transition: 200ms;
}

.k-button[disabled]{
    background-color:#DCDCDC;
    color:#616161;
    opacity: 1;
}

.k-button-icontext .k-icon {
    margin: 0;
}

.k-grid-edit-row>td>.k-input.k-textbox,.k-grid-edit-row>td>.k-textbox {
    background-color: transparent;
    border-radius: 0px;
    margin-left: -16px;
    margin-right: -16px;
}

.k-input.k-textbox:focus,.k-textbox:focus {
    border-color: #3f51b5;
}

.k-grid-edit-row .k-textbox, .k-grid-edit-row .k-textbox.k-input {
    padding-left: 0;
}

.k-pager-wrap .k-link:hover, .k-pager-wrap .k-pager-nav:hover {
    border-radius: 100%;
}

.k-widget {
    font-size: 12px;
}

div.k-grid-footer, div.k-grid-header {
    padding-right:17px;
}

/* .k-grid-header .k-grid-filter {
    padding: 8px;
    width: calc(16px + 1.42857143em);
    height: calc(16px + 1.42857143em);
    box-sizing: border-box;
    outline: 0;
    line-height: 2;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-line-pack: center;
    align-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    position: absolute;
    top: 27px;
    right: 14px;
    bottom: calc(8px + .28571429em);
    z-index: 1;
} */

k-grid-header .k-header>.k-link {
    margin: 0;
    padding: 0px 0px;
    line-height: inherit;
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
    outline: 0;
}

.k-filter-help-text {
    font-weight: 400;
    font-size: 14px;
    color: #626262;
}

.k-animation-container>.k-list-container>.k-list-scroller>.k-list {
    box-shadow: 0 3px 3px -2px rgba(0,0,0,.02), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
    font-weight: 400;
}

.k-list .k-item.k-state-selected {
    color:#3f51b5;
}

.k-list .k-item:hover.k-state-selected {
    color: #3f51b5;
}

.k-dropdown-wrap>.k-input {
    -ms-flex: 1;
    flex: 1;
    font-weight: normal;
    color: #000;
}

.k-button.k-primary, .k-slider .k-draghandle, .k-switch-on .k-switch-handle {
    color: hsla(0,0%,100%,.87);
    background-color: #3a4091;
    border-color: #3a4091;
}

/*
Background Calendário
*/

.k-calendar-container {
    padding: 0;
    background-color: #383838;
}

.k-calendar:not(.k-scheduler-calendar) .k-header {
    background-color: #383838;
}

.k-calendar:not(.k-scheduler-calendar) .k-content {
    background-color: #383838;
}

.k-calendar:not(.k-scheduler-calendar) .k-footer {
    background-color: #383838;
}

.k-calendar-container .k-calendar:not(.k-scheduler-calendar) {
    border-width: 0;
    background: #383838;
}

/*
Background Calendário F I N A L
*/

.k-calendar:not(.k-calendar-infinite):not(.k-scheduler-calendar) .k-content .k-link {
    width: 30px;
    height: 30px;
    line-height: 30px;
    margin: 0 auto;
    text-align: center;
}

.k-calendar:not(.k-scheduler-calendar) .k-state-focused .k-link {
    color: #ffffff;
    background-color: rgb(29, 119, 186);
    border-color: rgb(10, 58, 94);
}

.k-calendar:not(.k-scheduler-calendar) .k-state-hover {
    background-color:#ffffff;
    color: #383838;
}

.k-calendar:not(.k-calendar-infinite):not(.k-scheduler-calendar) .k-state-hover .k-link {
    background-color:#ffffff;
    color:#383838;
}

.k-calendar:not(.k-scheduler-calendar) .k-other-month .k-link {
    background-color: transparent;
    color:rgba(241, 241, 241, 0.2);
    border-radius:0%;
}
/* ... */

